--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="permission_grant">Grant permission</string>
     <string name="replace_bg">Replace icon background with Aliucord\'s</string>
     <string name="settings">Settings</string>
+    <string name="installing">Installing</string>
     <string name="show_menu">Show menu</string>
     <string name="theme">Theme</string>
     <string name="use_dex_from_storage">Use Aliucord.dex from storage</string>
