--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Aliucord Manager</string>
-    <string name="clear_files_cache">Clear files cache (Aliucord.dex and patched manifest)</string>
+    <string name="clear_files_cache">Clear files cache (Injector.dex and patched manifest)</string>
     <string name="commits">Commits</string>
     <string name="dex_location">Dex location</string>
     <string name="open_settings">Open settings</string>
@@ -13,15 +13,17 @@
     <string name="use_dex_from_storage">Use Aliucord.dex from storage</string>
     <string name="plugins">Plugins</string>
     <string name="launch_plugins">Launch Plugins Page</string>
-    <string name="plugin_title">%1$s v%2$s by %3$s</string>
+    <string name="plugin_title">%1$s v%2$s</string>
+    <string name="plugin_authors">By %1$s</string>
     <string name="delete_plugin">Delete %1$s</string>
     <string name="search">Search</string>
     <string name="view_plugin_changelog">View changelog for %1$s</string>
-    <string name="delete_plugin_body">Are you sure you want to delete this plugin? This action cannot be undone.</string>
+    <string name="delete_plugin_body">Are you sure you want to uninstall this plugin? This action cannot be undone.</string>
     <string name="delete">Delete</string>
     <string name="close">Close</string>
     <string name="support_server">Support Server</string>
     <string name="back">Back</string>
+    <string name="home">Home</string>
     <string name="install">Install</string>
     <string name="reinstall">Reinstall</string>
     <string name="update">Update</string>
@@ -30,5 +32,13 @@
     <string name="about">About</string>
     <string name="team">Team</string>
     <string name="contributors">Contributors</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
+    <string name="search_plugins">Search Plugins</string>
+    <string name="source_code">Source Code</string>
+    <string name="installer">Installer</string>
+    <string name="use_black">Use black</string>
+    <string name="use_black_description">Use black colors for dark mode</string>
+    <string name="theme_setting_description">Manager appearance</string>
+    <string name="no_plugins_installed">No plugins installed!</string>
+    <string name="store">Store</string>
 </resources>
