--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,21 @@
 <resources>
     <string name="app_name">Aliucord Manager</string>
-    <string name="clear_files_cache">Clear files cache (Injector.dex and patched manifest)</string>
+    <string name="clear_files_cache">Clear files cache</string>
     <string name="commits">Commits</string>
     <string name="dex_location">Dex location</string>
     <string name="open_settings">Open settings</string>
     <string name="permission_required">You need to grant storage permission to use this app</string>
     <string name="permission_grant">Grant permission</string>
-    <string name="replace_bg">Replace icon background with Aliucord\'s</string>
+    <string name="replace_bg">Replace app icon with Aliucord logo</string>
     <string name="settings">Settings</string>
     <string name="show_menu">Show menu</string>
     <string name="theme">Theme</string>
     <string name="use_dex_from_storage">Use Aliucord.dex from storage</string>
     <string name="plugins">Plugins</string>
-    <string name="launch_plugins">Launch Plugins Page</string>
-    <string name="plugin_title">%1$s v%2$s</string>
-    <string name="plugin_authors">By %1$s</string>
     <string name="uninstall_plugin">Uninstall %1$s</string>
     <string name="search">Search</string>
     <string name="view_plugin_changelog">View changelog for %1$s</string>
     <string name="delete_plugin_body">Are you sure you want to uninstall this plugin? This action cannot be undone.</string>
-    <string name="delete">Delete</string>
     <string name="close">Close</string>
     <string name="support_server">Support Server</string>
     <string name="back">Back</string>
@@ -27,12 +23,12 @@
     <string name="install">Install</string>
     <string name="reinstall">Reinstall</string>
     <string name="update">Update</string>
-    <string name="developer_mode">Enable Developer Mode</string>
-    <string name="debuggable">Make Aliucord debuggable</string>
+    <string name="developer_mode">Developer Mode</string>
+    <string name="debuggable">Debuggable</string>
+    <string name="debuggable_description">Use debuggable manifest</string>
     <string name="about">About</string>
     <string name="team">Team</string>
     <string name="contributors">Contributors</string>
-    <string name="loading">Loading…</string>
     <string name="search_plugins">Search Plugins</string>
     <string name="source_code">Source Code</string>
     <string name="installer">Installer</string>
@@ -41,4 +37,13 @@
     <string name="theme_setting_description">Manager appearance</string>
     <string name="no_plugins_installed">No plugins installed!</string>
     <string name="store">Store</string>
+    <string name="paging_initial_load">Loading…</string>
+    <string name="contributor">Contributor</string>
+    <string name="apply">Apply</string>
+    <string name="confirm">Confirm</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="download_apk">Download APK</string>
+    <string name="select_apk">Select APK</string>
+    <string name="download_method">Download Method</string>
+    <string name="changelog_media">Changelog Media</string>
 </resources>
