--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
   <string name="settings">Settings</string>
   <string name="show_menu">Show menu</string>
   <string name="theme">Theme</string>
-  <string name="use_dex_from_storage">Use Aliucord.dex from storage</string>
+  <string name="use_dex_from_storage">Use Injector.dex from storage</string>
   <string name="plugins">Plugins</string>
   <string name="uninstall_plugin">Uninstall %1$s</string>
   <string name="search">Search</string>
@@ -25,12 +25,12 @@
   <string name="update">Update</string>
   <string name="developer_mode">Developer Mode</string>
   <string name="debuggable">Debuggable</string>
-  <string name="debuggable_description">Use debuggable manifest</string>
+  <string name="debuggable_description">Enable debuggable flag</string>
   <string name="about">About</string>
   <string name="team">Team</string>
   <string name="contributors">Contributors</string>
   <string name="search_plugins">Search Plugins</string>
-  <string name="source_code">Source Code</string>
+  <string name="github">GitHub</string>
   <string name="installer">Installer</string>
   <string name="use_black">Use black</string>
   <string name="use_black_description">Use black colors for dark mode</string>
