--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
   <string name="changelog_media">Changelog Media</string>
   <string name="app_name_setting">App Name</string>
   <string name="package_name">Package Name</string>
+  <string name="clear">Clear</string>
 </resources>
