--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,16 +6,15 @@
   <string name="open_settings">Open settings</string>
   <string name="permission_required">You need to grant storage permission to use this app</string>
   <string name="permission_grant">Grant permission</string>
-  <string name="replace_bg">Replace app icon with Aliucord logo</string>
+  <string name="replace_bg">Replace app icon with Aliucord variant</string>
   <string name="settings">Settings</string>
   <string name="show_menu">Show menu</string>
   <string name="theme">Theme</string>
   <string name="use_dex_from_storage">Use Injector.dex from storage</string>
   <string name="plugins">Plugins</string>
-  <string name="uninstall_plugin">Uninstall %1$s</string>
   <string name="search">Search</string>
   <string name="view_plugin_changelog">View changelog for %1$s</string>
-  <string name="delete_plugin_body">Are you sure you want to uninstall this plugin? This action cannot be undone.</string>
+  <string name="delete_plugin_body">Are you sure you want to uninstall this plugin?</string>
   <string name="close">Close</string>
   <string name="support_server">Support Server</string>
   <string name="back">Back</string>
@@ -23,7 +22,7 @@
   <string name="install">Install</string>
   <string name="reinstall">Reinstall</string>
   <string name="update">Update</string>
-  <string name="developer_mode">Developer Mode</string>
+  <string name="advanced_options">Show advanced options</string>
   <string name="debuggable">Debuggable</string>
   <string name="debuggable_description">Enable debuggable flag</string>
   <string name="about">About</string>
@@ -32,11 +31,8 @@
   <string name="search_plugins">Search Plugins</string>
   <string name="github">GitHub</string>
   <string name="installer">Installer</string>
-  <string name="use_black">Use black</string>
-  <string name="use_black_description">Use black colors for dark mode</string>
   <string name="theme_setting_description">Manager appearance</string>
   <string name="no_plugins_installed">No plugins installed!</string>
-  <string name="store">Store</string>
   <string name="paging_initial_load">Loading…</string>
   <string name="contributor">Contributor</string>
   <string name="apply">Apply</string>
@@ -49,4 +45,7 @@
   <string name="app_name_setting">App Name</string>
   <string name="package_name">Package Name</string>
   <string name="clear">Clear</string>
+  <string name="launch">Launch</string>
+  <string name="uninstall">Uninstall</string>
+  <string name="version">Version</string>
 </resources>
