feat: dynamic color toggle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
   <string name="launch">Launch</string>
   <string name="uninstall">Uninstall</string>
   <string name="version">Version</string>
+    <string name="dynamic_color">Dynamic color</string>
 </resources>
