feat: various ui improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
   <string name="clear">Clear</string>
   <string name="launch">Launch</string>
   <string name="uninstall">Uninstall</string>
-  <string name="version">Version</string>
+  <string name="version">Download Version</string>
   <string name="dynamic_color">Dynamic color</string>
   <string name="appearance">Appearance</string>
   <string name="advanced">Advanced</string>
