--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
   <string name="commits">Commits</string>
   <string name="dex_location">Dex location</string>
   <string name="open_settings">Open settings</string>
-  <string name="replace_bg">Replace app icon with Aliucord variant</string>
+  <string name="replace_bg">Replace app icon</string>
+  <string name="replace_bg_description">Uses the Aliucord variant as opposed to Discord\'s own icon</string>
   <string name="settings">Settings</string>
   <string name="show_menu">Show menu</string>
   <string name="theme">Theme</string>
