--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">Aliucord Manager</string>
-  <string name="clear_files_cache">Clear files cache</string>
+  <string name="clear_cache">Clear cache</string>
   <string name="commits">Commits</string>
   <string name="dex_location">Dex location</string>
   <string name="open_settings">Open settings</string>
