--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,59 +1,76 @@
 <resources>
   <string name="app_name">Aliucord Manager</string>
-  <string name="clear_cache">Clear cache</string>
-  <string name="commits">Commits</string>
-  <string name="dex_location">Dex location</string>
-  <string name="open_settings">Open settings</string>
-  <string name="replace_bg">Replace app icon</string>
-  <string name="replace_bg_description">Uses the Aliucord variant as opposed to Discord\'s own icon</string>
-  <string name="settings">Settings</string>
-  <string name="show_menu">Show menu</string>
-  <string name="theme">Theme</string>
-  <string name="use_dex_from_storage">Use Injector.dex from storage</string>
-  <string name="plugins">Plugins</string>
-  <string name="search">Search</string>
-  <string name="view_plugin_changelog">View changelog for %1$s</string>
-  <string name="delete_plugin_body">Are you sure you want to uninstall this plugin?</string>
-  <string name="close">Close</string>
-  <string name="support_server">Support Server</string>
-  <string name="back">Back</string>
-  <string name="home">Home</string>
-  <string name="install">Install</string>
-  <string name="reinstall">Reinstall</string>
-  <string name="update">Update</string>
-  <string name="developer_options">Developer options</string>
-  <string name="debuggable">Debuggable</string>
-  <string name="debuggable_description">Enable debuggable flag</string>
-  <string name="about">About</string>
-  <string name="team">Team</string>
-  <string name="contributors">Contributors</string>
-  <string name="search_plugins">Search Plugins</string>
+  <string name="app_description">A modification for the Discord Android App</string>
+
+  <string name="aliucord">Aliucord</string>
   <string name="github">GitHub</string>
+  <string name="support_server">Support Server</string>
+  <string name="commits">Commits</string>
+  <string name="team">Team</string>
   <string name="website">Website</string>
   <string name="installer">Installer</string>
-  <string name="contributions">%o contributions</string>
-  <string name="theme_setting_description">Manager appearance</string>
-  <string name="no_plugins_installed">No plugins installed!</string>
-  <string name="contributor">Contributor</string>
-  <string name="apply">Apply</string>
-  <string name="confirm">Confirm</string>
-  <string name="dismiss">Dismiss</string>
-  <string name="download_apk">Download APK</string>
-  <string name="select_apk">Select APK</string>
-  <string name="download_method">Download Method</string>
-  <string name="changelog_media">Changelog Media</string>
-  <string name="app_name_setting">App Name</string>
-  <string name="package_name">Package Name</string>
-  <string name="clear">Clear</string>
-  <string name="launch">Launch</string>
-  <string name="uninstall">Uninstall</string>
-  <string name="version">Download Version</string>
-  <string name="dynamic_color">Dynamic color</string>
-  <string name="appearance">Appearance</string>
-  <string name="advanced">Advanced</string>
-  <string name="permissions_grant">Grant Permissions</string>
+
+  <string name="action_retry">Retry</string>
+  <string name="action_apply">Apply</string>
+  <string name="action_confirm">Confirm</string>
+  <string name="action_dismiss">Dismiss</string>
+  <string name="action_install">Install</string>
+  <string name="action_reinstall">Reinstall</string>
+  <string name="action_update">Update</string>
+  <string name="action_clear">Clear</string>
+  <string name="action_launch">Launch</string>
+  <string name="action_uninstall">Uninstall</string>
+  <string name="action_close">Close</string>
+  <string name="action_open_settings">Open settings</string>
+  <string name="action_search">Search</string>
+
+  <string name="permissions_grant_title">Grant Permissions</string>
   <string name="permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
-  <string name="aliucord_description">A modification for the Discord Android App</string>
-  <string name="load_fail">Failed to load</string>
-  <string name="retry">Retry</string>
+
+  <string name="install_success">Successfully installed Aliucord</string>
+  <string name="install_aborted">Aborted Aliucord installation</string>
+  <string name="install_failed">Installation failed with error %o</string>
+
+  <string name="settings_theme">Theme</string>
+  <string name="settings_advanced">Advanced</string>
+  <string name="settings_appearance">Appearance</string>
+  <string name="settings_developer_options">Developer options</string>
+  <string name="setting_clear_cache">Clear cache</string>
+  <string name="setting_dex_location">Dex location</string>
+  <string name="setting_use_dex_from_storage">Use Injector.dex from storage</string>
+  <string name="setting_replace_icon">Replace app icon</string>
+  <string name="setting_replace_icon_desc">Uses the Aliucord variant as opposed to Discord\'s own icon</string>
+  <string name="setting_debuggable">Debuggable</string>
+  <string name="setting_debuggable_desc">Enable debuggable flag</string>
+  <string name="setting_theme_desc">Manager appearance</string>
+  <string name="setting_app_name">App Name</string>
+  <string name="setting_package_name">Package Name</string>
+  <string name="setting_target_version">Download Version</string>
+  <string name="setting_dynamic_color">Dynamic color</string>
+
+  <string name="theme_system">System</string>
+  <string name="theme_dark">Dark</string>
+  <string name="theme_light">Light</string>
+
+  <string name="plugins_title">Plugins</string>
+  <string name="plugins_view_changelog">View changelog for %1$s</string>
+  <string name="plugins_delete_plugin_body">Are you sure you want to uninstall this plugin?</string>
+  <string name="plugins_search">Search Plugins</string>
+  <string name="plugins_none_installed">No plugins installed!</string>
+  <string name="plugins_changelog_media">Changelog Media</string>
+
+  <string name="navigation_back">Back</string>
+  <string name="navigation_home">Home</string>
+  <string name="navigation_about">About</string>
+  <string name="navigation_settings">Settings</string>
+
+  <string name="contributors">Contributors</string>
+  <string name="contributors_contributions">%o contributions</string>
+  <string name="contributors_contributor">Contributor</string>
+
+  <string name="selector_download_apk">Download APK</string>
+  <string name="selector_select_apk">Select APK</string>
+  <string name="selector_download_method">Download Method</string>
+
+  <string name="network_load_fail">Failed to load</string>
 </resources>
