Feat: Upgraded installer ui

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -73,4 +73,6 @@
   <string name="version_beta">Beta</string>
   <string name="version_alpha">Alpha</string>
   <string name="version_load_fail">Failed to retrieve version</string>
+    <string name="installer_completed">Completed!</string>
+  <string name="installer_copy_text">Copy</string>
 </resources>
