--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,10 +86,11 @@
 
   <string name="version_supported">Supported version:</string>
   <string name="version_installed">Installed version:</string>
+  <string name="version_none">None</string>
   <string name="version_stable">Stable</string>
   <string name="version_beta">Beta</string>
   <string name="version_alpha">Alpha</string>
-  <string name="version_unknown" translatable="false" />
+  <string name="version_unknown">Unknown</string>
   <string name="version_load_fail">Failed to retrieve version</string>
 
   <string name="installer_save_file">Save to file</string>
