--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
   <string name="action_cleared_cache">Cleared cache!</string>
 
   <string name="permissions_grant_title">Grant Permissions</string>
-  <string name="permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
+  <string name="permissions_grant_body">In order for Aliucord Manager to function, file permissions are required. Since shared data is stored in ~/Aliucord, permissions are required in order to access it.</string>
 
   <string name="launch_aliucord_fail">Failed to launch Aliucord</string>
 
@@ -65,6 +65,7 @@
   <string name="plugins_none_installed">No plugins installed!</string>
   <string name="plugins_changelog_media">Changelog Media</string>
   <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
+  <string name="plugins_error">An error occurred while processing plugins!</string>
 
   <string name="navigation_back">Back</string>
   <string name="navigation_home">Home</string>
