--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -48,11 +48,11 @@
   <string name="setting_package_name">Nombre del Paquete</string>
   <string name="setting_target_version">Versión a descargar</string>
   <string name="setting_dynamic_color">Colores dinámicos</string>
-  <string name="setting_hermes_replace_libcpp">Replace libc++ (RN only)</string>
-  <string name="setting_hermes_replace_libcpp_desc">Downloads and uses libc++ from patched hermes</string>
-  <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
-  <string name="settings_invalid_package_name">Nombre de paquete inválido, restablezca a com.aliucord</string>
+  <string name="setting_hermes_replace_libcpp">Replace libc++ (solo RN)</string>
+  <string name="setting_hermes_replace_libcpp_desc">Descargar y usar libc++ del hermes parcheado</string>
+  <string name="setting_keep_patched_apks">Mantener APKs parcheados</string>
+  <string name="setting_keep_patched_apks_desc">No eliminar APKs parcheados despues de instalar (para instalacion manual)</string>
+  <string name="settings_invalid_package_name">Nombre de paquete inválido, restableciendo a \"com.aliucord\"</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Oscuro</string>
   <string name="theme_light">Claro</string>
@@ -61,9 +61,9 @@
   <string name="plugins_delete_plugin_body">¿Está seguro de que quiere desinstalar este complemento?</string>
   <string name="plugins_search">Buscar complementos</string>
   <string name="plugins_none_installed">¡No hay complementos instalados!</string>
-  <string name="plugins_changelog_media">Media de cambios</string>
+  <string name="plugins_changelog_media">Galeria de cambios</string>
   <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
-  <string name="plugins_error">An error occurred while processing plugins!</string>
+  <string name="plugins_error">¡Un error ha ocurrido cargando los plugins!</string>
   <string name="navigation_back">Volver</string>
   <string name="navigation_home">Inicio</string>
   <string name="navigation_about">Sobre</string>
@@ -84,25 +84,25 @@
   <string name="version_stable">Estable</string>
   <string name="version_beta">Beta</string>
   <string name="version_alpha">Alfa</string>
-  <string name="version_unknown">Unknown</string>
+  <string name="version_unknown">Desconocido</string>
   <string name="version_load_fail">Error al recuperar la versión</string>
-  <string name="installer_save_file">Guardar en archivo</string>
-  <string name="installer_file_save_success">Guardado en %s</string>
+  <string name="installer_save_file">Guardar como archivo</string>
+  <string name="installer_file_save_success">Guardado como %s</string>
   <string name="installer_file_save_failed">Error al guardar: %s</string>
-  <string name="installer_cached">(Cachado)</string>
+  <string name="installer_cached">(En Caché)</string>
   <string name="installer_success">Aliucord instalado con éxito</string>
   <string name="installer_aborted">Se abortó la instalación de Aliucord</string>
   <string name="installer_failed">La instalación falló con el error %o</string>
   <string name="installer_uninstall_new">¡Por favor, desinstala tu versión actual de Aliucord para continuar!</string>
   <string name="install_group_apk_dl">Descargar APKs</string>
   <string name="install_group_lib_dl">Descargar librerías</string>
-  <string name="install_group_patch">Parchar APKs</string>
+  <string name="install_group_patch">Parchear APKs</string>
   <string name="install_group_install">Instalar</string>
   <string name="install_step_patch_icons">Parcheando íconos de aplicación</string>
   <string name="install_step_patch_manifests">Parcheando manifestos de APK</string>
   <string name="install_step_patch_dex">Añadiendo dex de Aliucord en APK</string>
   <string name="install_step_patch_libs">Reemplazando librerías</string>
-  <string name="install_step_signing">Firmando APK...</string>
+  <string name="install_step_signing">Firmando APK</string>
   <string name="install_step_installing">Instalando APKs</string>
   <string name="install_step_dl_apk_base">Descargando APK base</string>
   <string name="install_step_dl_apk_lib">Descargando APK de liberarías</string>
@@ -121,5 +121,5 @@
   <string name="status_failed">Fallido</string>
   <string name="status_queued">En cola</string>
   <string name="updater_body">¡Se ha publicado una nueva actualización para Aliucord Manager! Puede que sea necesaria para funcionar correctamente. ¿Quieres actualizar?</string>
-  <string name="updater_title">Actualizada a %1$s</string>
+  <string name="updater_title">Actualizar a %1$s</string>
 </resources>
