--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
   <string name="website">Website</string>
   <string name="installer">Installer</string>
 
+  <string name="action_cancel">Cancel</string>
   <string name="action_retry">Retry</string>
   <string name="action_apply">Apply</string>
   <string name="action_confirm">Confirm</string>
@@ -27,6 +28,7 @@
   <string name="action_expand">Expand</string>
   <string name="action_copied">Copied!</string>
   <string name="action_cleared_cache">Cleared cache!</string>
+  <string name="action_exit_anyways">Exit anyways</string>
 
   <string name="permissions_grant_title">Grant Permissions</string>
   <string name="permissions_grant_body">In order for Aliucord Manager to function, file permissions are required. Since shared data is stored in ~/Aliucord, permissions are required in order to access it.</string>
@@ -91,6 +93,7 @@
   <string name="installer_cached">(Cached)</string>
   <string name="installer_success">Successfully installed Aliucord</string>
   <string name="installer_aborted">Aborted Aliucord installation</string>
+  <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">Please uninstall your current version of Aliucord in order to continue!</string>
 
   <string name="install_error_unknown">Failed to install (Unknown reason)</string>
@@ -102,9 +105,9 @@
   <string name="install_error_incompatible">Application is incompatible with this device</string>
   <string name="install_error_timeout">Installation timed out</string>
 
-  <string name="install_group_apk_dl">Download APKs</string>
-  <string name="install_group_lib_dl">Download Libraries</string>
-  <string name="install_group_patch">Patch APKs</string>
+  <string name="install_group_prepare">Prepare</string>
+  <string name="install_group_download">Download dependencies</string>
+  <string name="install_group_patch">Patch APK</string>
   <string name="install_group_install">Install APK</string>
 
   <string name="install_step_patch_icons">Patching app icons</string>
@@ -127,6 +130,9 @@
 
   <string name="updater_body">A new update has been released for Aliucord Manager! It may be required in order to function properly. Would you like to update?</string>
   <string name="updater_title">Update to %1$s</string>
+
+  <string name="installer_abort_title">Really exit?</string>
+  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
 
   <string name="downloader_err_unknown">Download failed (Unknown)</string>
   <string name="downloader_err_response">Download failed (Invalid response)</string>
