--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,18 +110,21 @@
   <string name="install_group_patch">Patch APK</string>
   <string name="install_group_install">Install APK</string>
 
+  <string name="install_step_fetch_kt_version">Fetching target Discord version</string>
+  <string name="install_step_downgrade_check">Checking for older installations</string>
+  <string name="install_step_dl_kt_apk">Downloading Discord APK</string>
+  <string name="install_step_dl_kotlin">Downloading Kotlin Stdlib</string>
+  <string name="install_step_dl_injector">Downloading Aliucord Injector</string>
+  <string name="install_step_dl_aliuhook">Downloading Aliuhook library</string>
+  <string name="install_step_copy">Copying dependencies</string>
   <string name="install_step_patch_icons">Patching app icons</string>
   <string name="install_step_patch_manifests">Patching apk manifests</string>
-  <string name="install_step_patch_dex">Adding aliucord dex into apk</string>
-  <string name="install_step_patch_libs">Replacing libraries</string>
+  <string name="install_step_add_injector">Adding Aliucord injector</string>
+  <string name="install_step_add_aliuhook">Adding Aliuhook library</string>
+  <string name="install_step_alignment">Aligning APKs</string>
   <string name="install_step_signing">Signing APKs</string>
   <string name="install_step_installing">Installing APKs</string>
-
-  <string name="install_step_fetch_kt_version">Fetching target Discord version</string>
-  <string name="install_step_dl_kt_apk">Downloading Discord APK</string>
-  <string name="install_step_dl_kotlin">Downloading Kotlin library</string>
-  <string name="install_step_dl_injector">Downloading injector</string>
-  <string name="install_step_dl_aliuhook">Downloading Aliuhook library</string>
+  <string name="install_step_cleanup">Cleaning up</string>
 
   <string name="status_success">Success</string>
   <string name="status_ongoing">Ongoing</string>
