--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
   <string name="website">Website</string>
   <string name="installer">Installer</string>
 
+  <string name="action_cancel">Cancel</string>
   <string name="action_retry">Retry</string>
   <string name="action_apply">Apply</string>
   <string name="action_confirm">Confirm</string>
@@ -27,6 +28,7 @@
   <string name="action_expand">Expand</string>
   <string name="action_copied">Copied!</string>
   <string name="action_cleared_cache">Cleared cache!</string>
+  <string name="action_exit_anyways">Exit anyways</string>
 
   <string name="permissions_grant_title">Grant Permissions</string>
   <string name="permissions_grant_body">In order for Aliucord Manager to function, file permissions are required. Since shared data is stored in ~/Aliucord, permissions are required in order to access it.</string>
@@ -124,6 +126,9 @@
   <string name="status_ongoing">Ongoing</string>
   <string name="status_failed">Failed</string>
   <string name="status_queued">Queued</string>
+
+  <string name="installer_abort_title">Really exit?</string>
+  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
 
   <string name="updater_body">A new update has been released for Aliucord Manager! It may be required in order to function properly. Would you like to update?</string>
   <string name="updater_title">Update to %1$s</string>
