--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,18 +41,9 @@
   <string name="settings_appearance">Appearance</string>
   <string name="settings_developer_options">Developer options</string>
   <string name="setting_clear_cache">Clear cache</string>
-  <string name="setting_replace_icon">Replace app icon</string>
-  <string name="setting_replace_icon_desc">Uses the Aliucord variant as opposed to Discord\'s own icon</string>
-  <string name="setting_debuggable">Debuggable</string>
-  <string name="setting_debuggable_desc">Enable debuggable flag</string>
-  <string name="setting_app_name">App Name</string>
-  <string name="setting_target_version">Download Version (RN only)</string>
   <string name="setting_dynamic_color">Dynamic color</string>
-  <string name="setting_hermes_replace_libcpp">Replace libc++ (RN only)</string>
-  <string name="setting_hermes_replace_libcpp_desc">Downloads and uses libc++ from patched hermes</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
-  <string name="settings_invalid_package_name">Invalid package name, reset to com.aliucord</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
@@ -115,6 +106,7 @@
   <string name="install_step_dl_aliuhook">Downloading Aliuhook library</string>
   <string name="install_step_copy">Copying dependencies</string>
   <string name="install_step_patch_manifests">Patching apk manifests</string>
+  <string name="install_step_patch_icon">Patching app icon</string>
   <string name="install_step_add_injector">Adding Aliucord injector</string>
   <string name="install_step_add_aliuhook">Adding Aliuhook library</string>
   <string name="install_step_alignment">Aligning APKs</string>
@@ -139,12 +131,16 @@
   <string name="downloader_err_file_exists">Download failed (File exists)</string>
   <string name="downloader_err_storage_space">Download failed (Insufficient space)</string>
 
+  <string name="installopts_title">Aliucord provides several customizations at installation time that are not configurable once installed.</string>
   <string name="installopts_pkgname_title">Package Name</string>
   <string name="installopts_pkgname_desc">The package name is a unique identifier for all apps. Using different ones can allow for multiple installations of Aliucord.</string>
   <string name="installopts_pkgname_invalid">Invalid package name!</string>
   <string name="installopts_pkgname_taken">Target app will be overwritten!</string>
   <string name="installopts_pkgname_ok">Valid package name!</string>
-
   <string name="installopts_appname_title">App Name</string>
   <string name="installopts_appname_desc">The app name is what\'s displayed in the launcher. This should be changed on secondary installations for ease of use.</string>
+  <string name="installopts_debuggable_title">Debuggable</string>
+  <string name="installopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
+  <string name="installopts_icon_title">Replace app icon</string>
+  <string name="installopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
 </resources>
